--- a/support_tools/CMakeLists.txt
+++ b/support_tools/CMakeLists.txt
@@ -11,5 +11,7 @@ find_package(
 catkin_package()
 
 install(DIRECTORY scripts
-  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+  USE_SOURCE_PERMISSIONS
+  FILES_MATCHING PATTERN "*.sh"
 )
