--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -130,7 +130,7 @@ build_melodic:
 
 build_melodic_cuda:
   stage: build
-  image: autoware/autoware:bleedingedge-melodic-base-cuda
+  image: autonomoustuff/autoware:bleedingedge-melodic-base-cuda
   <<: *build_cuda
 
 build_melodic_cross:
