--- a/udon_socket/CMakeLists.txt
+++ b/udon_socket/CMakeLists.txt
@@ -4,10 +4,10 @@ project(udon_socket)
 
 find_package(autoware_build_flags REQUIRED)
 
-find_package(tablet_socket_msgs REQUIRED)
 find_package(catkin REQUIRED COMPONENTS
         roscpp
-        )
+        tablet_socket_msgs
+)
 
 set(CMAKE_CXX_FLAGS "-O2 -Wall ${CMAKE_CXX_FLAGS}")
 
@@ -20,7 +20,6 @@ catkin_package(
 include_directories(
         include
         ${catkin_INCLUDE_DIRS}
-        ${tablet_socket_msgs_INCLUDE_DIRS}
 )
 
 add_library(udon lib/udon_socket/udon.cpp)
