add vehicle engage panel
Signed-off-by: wep21 <border_goldenmarket@yahoo.co.jp>

--- a/autoware_camera_lidar_calibrator/CMakeLists.txt
+++ b/autoware_camera_lidar_calibrator/CMakeLists.txt
@@ -3,43 +3,30 @@ project(autoware_camera_lidar_calibrator)
 
 include(FindPkgConfig)
 
-
 find_package(autoware_build_flags REQUIRED)
-
-find_package(autoware_msgs REQUIRED)
 find_package(catkin REQUIRED COMPONENTS
-    cv_bridge
-    image_transport
-    pcl_conversions
-    pcl_ros
-    roscpp
-    sensor_msgs
-    geometry_msgs
-    tf
-    autoware_msgs
+  autoware_msgs
+  cv_bridge
+  geometry_msgs
+  image_transport
+  pcl_conversions
+  pcl_ros
+  roscpp
+  sensor_msgs
+  tf
 )
 find_package(Qt5Core REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(PCL)
 
-catkin_package(CATKIN_DEPENDS
-    cv_bridge
-    image_transport
-    roscpp
-    sensor_msgs
-    pcl_conversions
-    pcl_ros
-    autoware_msgs
-    geometry_msgs
-    tf
-)
+catkin_package()
 
 set(CMAKE_CXX_FLAGS "-O3 -g -Wall ${CMAKE_CXX_FLAGS}")
 
 include_directories(
-    ${catkin_INCLUDE_DIRS}
-    ${Boost_INCLUDE_DIRS}
-    ${PCL_INCLUDE_DIRS}
+  ${catkin_INCLUDE_DIRS}
+  ${Boost_INCLUDE_DIRS}
+  ${PCL_INCLUDE_DIRS}
 )
 
 link_directories(${PCL_LIBRARY_DIRS})
@@ -47,23 +34,24 @@ link_directories(${OpenCV_LIBRARY_DIRS})
 
 #camera lidar node
 add_executable(autoware_camera_lidar_calibration_node
-        src/autoware_camera_lidar_calibration/camera_lidar_calibration_node.cpp
+  src/autoware_camera_lidar_calibration/camera_lidar_calibration_node.cpp
 )
 target_link_libraries(autoware_camera_lidar_calibration_node
-    ${OpenCV_LIBRARIES}
-    ${catkin_LIBRARIES}
-    ${PCL_LIBRARIES}
+  ${OpenCV_LIBRARIES}
+  ${catkin_LIBRARIES}
+  ${PCL_LIBRARIES}
 )
 add_dependencies(autoware_camera_lidar_calibration_node ${catkin_EXPORTED_TARGETS})
 
 #camera intrinsics node
 catkin_python_setup()
 
-catkin_install_python(PROGRAMS
+catkin_install_python(
+  PROGRAMS
     nodes/cameracalibrator.py
     nodes/cameracheck.py
     scripts/tarfile_calibration.py
-    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
 install(TARGETS
@@ -74,9 +62,11 @@ install(TARGETS
 )
 
 install(DIRECTORY launch/
-        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
-        PATTERN ".svn" EXCLUDE)
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
+  PATTERN ".svn" EXCLUDE
+)
 
 install(DIRECTORY docs/
-        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/docs
-        PATTERN ".svn" EXCLUDE)
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/docs
+  PATTERN ".svn" EXCLUDE
+)
