--- a/marker_downsampler/package.xml
+++ b/marker_downsampler/package.xml
@@ -7,4 +7,9 @@
   <license>Apache 2</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+
+  <depend>message_filters</depend>
+  <depend>rospy</depend>
+  <depend>std_msgs</depend>
+  <depend>visualization_msgs</depend>
 </package>
