--- a/sound_player/CMakeLists.txt
+++ b/sound_player/CMakeLists.txt
@@ -7,14 +7,16 @@ find_package(catkin REQUIRED COMPONENTS
 )
 find_package(sound_play REQUIRED)
 
-catkin_package(
-  CATKIN_DEPENDS rospy std_msgs
-)
+catkin_package()
 
 catkin_install_python(PROGRAMS scripts/sound_player.py
-        DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 install(FILES scripts/sound_player.yaml
-        DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
-#TODO INSTALL ALL THE WAVs, MODIFY SCRIPT
+install(DIRECTORY wavs/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
