--- a/tablet_socket/CMakeLists.txt
+++ b/tablet_socket/CMakeLists.txt
@@ -1,28 +1,20 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(tablet_socket)
 
-
 find_package(autoware_build_flags REQUIRED)
-
 find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  tf
-  gnss
-  tablet_socket_msgs
   autoware_can_msgs
-  geometry_msgs
   autoware_msgs
+  geometry_msgs
+  gnss
+  roscpp
+  tablet_socket_msgs
+  tf
 )
 
 set(CMAKE_CXX_FLAGS "-O2 -Wall ${CMAKE_CXX_FLAGS}")
 
-catkin_package(CATKIN_DEPENDS
-  tf
-  tablet_socket_msgs
-  autoware_can_msgs
-  autoware_msgs
-  gnss
-)
+catkin_package()
 
 include_directories(
   include
@@ -35,11 +27,10 @@ add_dependencies(tablet_receiver ${catkin_EXPORTED_TARGETS})
 
 add_executable(tablet_sender nodes/tablet_sender/tablet_sender.cpp)
 target_link_libraries(tablet_sender ${catkin_LIBRARIES})
-add_dependencies(tablet_sender
-        ${catkin_EXPORTED_TARGETS}
-        )
+add_dependencies(tablet_sender ${catkin_EXPORTED_TARGETS})
 
 install(TARGETS tablet_receiver tablet_sender
-        ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-        LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-        RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
