--- a/pc2_downsampler/package.xml
+++ b/pc2_downsampler/package.xml
@@ -7,4 +7,11 @@
   <license>Apache 2</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+
+  <depend>geometry_msgs</depend>
+  <depend>libpcl-all-dev</depend>
+  <depend>message_filters</depend>
+  <depend>rospy</depend>
+  <depend>sensor_msgs</depend>
+  <depend>std_msgs</depend>
 </package>
