--- a/lanelet_aisan_converter/package.xml
+++ b/lanelet_aisan_converter/package.xml
@@ -28,6 +28,7 @@
   <depend>vector_map_msgs</depend>
 
   <test_depend>rostest</test_depend>
+  <test_depend>lanelet2_maps</test_depend>
 
   <export></export>
 </package>
